--- a/Brownie Site/assests/stylesheets/main.css
+++ b/Brownie Site/assests/stylesheets/main.css
@@ -42,6 +42,9 @@ table {
 	border-spacing: 0;
 }
 
+/* ^^ EVERYTHING ABOVE IT STANDARD RESET. DO NOT CHANGE ^^ */
+/* EVERYTHING BELOW THIS POINT IS OKAY TO CHANGE. THINGS LOWER, TAKE PRIORITY OVER THINGS ABOVE */
+
 h1{
 	color: red
 }
